--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,68 @@
-.DS_Store
+# Environment and sensitive files
 .env
-/__pycache__
+.env.local
+.env.*.local
+*.key
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+.env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# System files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Project specific
+temp.pdf
+*.log
+streamlit.log
+mcp_server.log
+
+# Temporary files
 /doc
 /input
 /video
 /mcp_web_search/test_client
+
+# UV lock files (can be regenerated)
+uv.lock
+*/uv.lock
